--- a/css/common.css
+++ b/css/common.css
@@ -2,13 +2,273 @@
   box-sizing: border-box;
 }
 
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+h2 {
+  padding: 0;
+  margin: 0 0 16px;
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 1.33;
+  letter-spacing: 0.04em;
+  text-align: left;
+  color: #2E2F42;
+}
+
+input {
+  outline: none;
+  border: 1px solid #808080;
+  border-radius: 4px;
+  padding: 8px 16px;
+  font-weight: 400;
+  letter-spacing: 0.04em;
+}
+
+input:hover {
+  border: 1px solid #000000;
+}
+
+input:focus {
+  border: 1px solid #808080;
+}
+
+button {
+  border: none;
+  padding: 6px 32px;
+  border-radius: 8px;
+  color: #FFFFFF;
+  font-size: 16px;
+  font-weight: 500;
+  letter-spacing: 0.04em;
+}
+
 body {
   margin: 16px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fafafa;
   color: #212121;
   line-height: 1.5;
+  padding: 24px;
+}
+
+#categories {
+  max-width: 392px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 24px;
+  margin: auto;
+  background-color: #FFFFFF;
+  padding: 24px;
+  border-radius: 8px;
+}
+
+.item {
+  background-color: #F6F6FE;
+  padding: 16px;
+  border-radius: 8px;
+}
+
+.item ul {
+  display: flex;
+  flex-direction: column;
+  row-gap: 8px;
+}
+
+.item ul li {
+  border: 1px solid #808080;
+  border-radius: 4px;
+  padding: 8px 16px;
+  font-size: 16px;
+  font-weight: 400;
+  letter-spacing: 0.04em;
+  text-align: left;
+  color: #2E2F42;
+
+}
+
+.gallery {
+
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 24px;
+  row-gap: 48px;
+  margin: auto;
+  padding: 100px;
+  background-color: #FFFFFF;
+}
+
+.gallery li img {
+  width: 360px;
+  height: 300px;
+  object-fit: cover;
+}
+
+.card-enter-name {
+  padding: 24px;
+  background-color: #FFFFFF;
+  max-width: 408px;
+  margin: auto;
+  border-radius: 8px;
+}
+
+#name-input {
+  width: 100%;
+  max-width: 360px;
+  height: 40px;
+  text-align: left;
+  margin-bottom: 16px;
+}
+
+h1 {
+  padding: 0;
+  margin: 0;
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 1.33;
+  letter-spacing: 0.04em;
+  text-align: left;
+}
+
+.login-form {
+  max-width: 360px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 8px;
+  margin: auto;
+  background-color: #FFFFFF;
+  padding: 24px;
+  border-radius: 8px;
+}
+
+.login-form label {
+  display: flex;
+  flex-direction: column;
+  font-weight: 400;
+  letter-spacing: 0.04em;
+  text-align: left;
+}
+
+.login-form button {
+  padding: 8px 16px;
+}
+
+.login-form label:nth-child(2) {
+  margin-bottom: 8px;
+}
+
+.login-form label input {
+  height: 40px;
+  text-align: left;
+}
+
+.login-form button {
+  max-width: 86px;
+  background: #4E75FF;
+}
+
+.login-form button:hover {
+  background: #6C8CFF;
+}
+
+.widget {
+  margin: auto;
+  max-width: 400px;
+  border-radius: 8px;
+  background-color: #ffffff;
+  padding: 24px 24px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 16px;
+  justify-content: center;
+  align-items: center;
+  height: 280px;
+
+
+}
+
+.widget p {
+  font-weight: 400;
+  letter-spacing: 0.04em;
+  margin: 0;
+  text-align: center;
+
+}
+
+.change-color {
+  padding: 8px 16px;
+  border-radius: 8px;
+  background: #4E75FF;
+  color: #fff;
+  border: none;
+  max-width: 148px;
+  font-weight: 500;
+  letter-spacing: 0.04em;
+}
+
+.change-color:hover {
+  background: #6C8CFF;
+}
+
+#controls {
+  max-width: 486px;
+  background-color: #F6F6FE;
+  border-radius: 8px;
+  display: flex;
+  justify-content: center;
+  gap: 16px;
+  padding: 32px;
+  margin: auto auto 16px;
+}
+
+#controls input {
+  width: 100%;
+  min-width: 40px;
+  max-width: 150px;
+  height: 40px;
+  text-align: center;
+}
+
+
+#controls button[data-create] {
+  background-color: #4E75FF;
+}
+
+#controls button[data-create]:hover {
+  background-color: #6C8CFF;
+}
+
+#controls button[data-destroy] {
+  background-color: #FF4E4E;
+}
+
+#controls button[data-destroy]:hover {
+  background-color: #FF7070;
+}
+
+#boxes {
+  max-width: 486px;
+  margin: auto;
+  background-color: #F6F6FE;
+  border-radius: 8px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 44px;
+  padding: 32px;
+}
+
+.card-boxes {
+  background-color: #FFFFFF;
+  border-radius: 8px;
+  padding: 24px;
+  margin: auto;
+  max-width: 486px;
 }
